<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.taylorearl.cs3270midterm_earl.ActionFragment"
    android:paddingLeft="90dp"
    android:paddingRight="30dp">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_weight"/>

        <EditText
            android:id="@+id/i_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_height"/>

        <EditText
            android:id="@+id/i_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="90dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_age"/>

        <EditText
            android:id="@+id/i_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/r_Female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_female" />

        <RadioButton
            android:id="@+id/r_Male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_male" />
    </LinearLayout>
    <Button
        android:id="@+id/b_calc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/l_calculate" />

</LinearLayout>
